docs: enhance string topic with detailed implementation and web research
- Enhanced JDK 24 hidden class concatenation section with JDK-8336856 details
- Added StringLatin1 and StringUTF16 comprehensive method documentation
- Added String dispatch mechanism explanation
- Added String Deduplication (JEP 192) section with implementation details
- Added additional web research references and bug report links

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>